--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
-    "mongoose": "^5.4.15"
+    "mongoose": "^5.4.15",
+    "multer": "^1.4.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
